resolve header gap.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -5,6 +5,8 @@
   background-color: black;
   opacity: 0.9;
   text-align: center;
+  margin: 0;
+  padding: 0;
 }
 
 .flexbox {
